@startuml
title Data Logger Node Class Diagram
package ros {
    class rosbag::RecorderOptions
    class rosbag::Recorder
}
package eros {
    class BaseNode
    class BaseNodeProcess
    namespace eros_diagnostic {
        class Diagnostic
    }
}
namespace eros_nodes {
    class DataLoggerNode #LimeGreen {
        -- Initialization Functions --
        +bool start()
        +eros::eros_diagnostic::Diagnostic finish_initialization()

        -- Update Functions --
        +bool run_loop1()
        +bool run_loop2()
        +bool run_loop3()
        +bool run_001hz()
        +bool run_01hz()
        +bool run_01hz_noisy()
        +bool run_1hz()
        +bool run_10hz()
        +thread_loop()

        -- Attribute Functions --
        +DataLoggerProcess* get_process()

        -- Data Functions --

        -- Message Functions --
        +snapshot_trigger_Callback(const std_msgs::Empty::ConstPtr& t_msg)
        +bool changenodestate_service(eros::srv_change_nodestate::Request& req,
                                    eros::srv_change_nodestate::Response& res)
        +system_commandAction_Callback(const eros::system_commandGoalConstPtr& goal)
        +command_Callback(const eros::command::ConstPtr& t_msg)

        -- Support Functions --
        +run_logger(DataLoggerNode* node)
        -create_snapshot_file()

        -- Convert Functions --
        
        -- Printing Functions --

        -- Destructors --
        +cleanup()

        -- Printing Functions --
        +string pretty()

    }
    class DataLoggerNodeProcess #LimeGreen {
        -- Initialization Functions --
        +eros_diagnostic::Diagnostic finish_initialization()
        +reset()

        -- Update Functions --
        +eros_diagnostic::Diagnostic update(double t_dt, double t_ros_time)

        -- Attribute Functions --
        +set_logfileduration(double v)
        +double get_logfile_duration()
        +bool set_logdirectory(std::string v)
        +bool is_logging_enabled()
        +string get_logdirectory() 
        +bool getSnapshotMode()
        +setSnapshotMode(bool v) 

        -- Data Functions --

        -- Message Functions --
        +eros_diagnostic::Diagnostic[] new_commandmsg(eros::command msg)

        -- Support Functions --
        +eros::eros_diagnostic::Diagnostic[] check_programvariables()

        -- Convert Functions --
        
        -- Printing Functions --

        -- Destructors --
        +cleanup()

        -- Printing Functions --
        +string pretty()
    }

    BaseNode <|-- DataLoggerNode
    BaseNodeProcess <|-- DataLoggerNodeProcess
    DataLoggerNode -> DataLoggerNodeProcess 



}

@enduml